# zero2prod

./: Cargo.toml  configuration.yaml  docker-compose.yaml  sqlx-data.json
dbinit/postgres/: 01_subscriptions.sql  02_subscription_tokens.sql
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs  tests.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
