[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.2.1"
serde = { version = "1", features = ["derive"]}
config = "0.11"
chrono = "0.4.23"
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
tokio = { version = "1.21", features = ["full"] }
tokio-test = "0.4.2"
reqwest = "0.11.12"
