[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.2.1"
serde = { version = "1", features = ["derive"]}
config = "0.11"
chrono = "0.4.23"
uuid = { version = "1.2.2", features = ["v4"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-actix-web = "0.6.2"
secrecy = { version = "0.8.0", features = ["serde"] }
unicode-segmentation = "1.10.0"
validator = "0.16.0"
reqwest = { version = "0.11.12", default-features = false, features = ["json", "rustls-tls"]}
anyhow = "1.0.68"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
tokio-test = "0.4.2"
once_cell = "1.16.0"
claim = "0.5"
tokio = { version = "1", features = ["macros", "rt"] }
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
serde_json = "1.0.91"
